@@ -6,7 +6,7 @@ from lxml import etree
 from difflib import SequenceMatcher
 from trytond.model import ModelView, ModelSQL, fields
 from trytond.backend import TableHandler
-from trytond.pyson import PYSONEncoder, CONTEXT, Eval, Not, Bool, Equal
+from trytond.pyson import PYSONEncoder, CONTEXT, Eval
 from trytond.tools import safe_eval
 from trytond.transaction import Transaction
 from trytond.wizard import Wizard
@@ -31,12 +31,12 @@ class View(ModelSQL, ModelView):
     inherit = fields.Many2One('ir.ui.view', 'Inherited View', select=1,
             ondelete='CASCADE')
     field_childs = fields.Char('Children Field', states={
-        'invisible': Not(Equal(Eval('type'), 'tree')),
-        }, depends=['type'])
+            'invisible': Eval('type') != 'tree',
+            }, depends=['type'])
     module = fields.Char('Module', readonly=True)
     domain = fields.Char('Domain', states={
-        'invisible': Not(Bool(Eval('inherit'))),
-        }, depends=['inherit'])
+            'invisible': ~Eval('inherit'),
+            }, depends=['inherit'])
 
     def __init__(self):
         super(View, self).__init__()
